Updated title and description

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>About Aarushee Solar</title>
-<meta name="description" content="Aarushee Solar is a leading solar power producer in India for homes and businesses at affordable prices with a track record of delivering solar projects &amp; a total portfolio of over 100 MW across 12 states.">
+<meta name="description" content="About Aarushee Solar Team which is a leading solar power company that provides solar systems in India for homes and businesses at affordable prices.">
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Aarushee Solar - A Leading Solar Power Company in India" />
@@ -110,63 +110,6 @@
 <img src="images/team/about-us.jpg" alt="" style="height:300px;">
 </div>
 </div>
-<!--<div class="row m0 members">
-<h2 style="font-weight:bold;">Our Team</h2>
-<div class="col-sm-4 member3_1 member">
-<div class="row m0">
-<div class="row m0 memImg">
-<img src="images/team/mem1.png" alt="">
-</div>
-<div class="row m0 memberIntro">
-<div class="row m0 name">John Smith</div>
-<div class="row m0 pro">Chief Executive Officer</div>
-<div class="row m0">
-<ul class="list-inline memberSocial">
-<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-<div class="col-sm-4 member3_1 member">
-<div class="row m0">
-<div class="row m0 memImg">
-<img src="images/team/mem2.png" alt="">
-</div>
-<div class="row m0 memberIntro">
-<div class="row m0 name">Ardian Bold</div>
-<div class="row m0 pro">Architect</div>
-<div class="row m0">
-<ul class="list-inline memberSocial">
-<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-<div class="col-sm-4 member3_1 member">
-<div class="row m0">
-<div class="row m0 memImg">
-<img src="images/team/mem3.png" alt="">
-</div>
-<div class="row m0 memberIntro">
-<div class="row m0 name">William Mayer</div>
-<div class="row m0 pro">Finance Manager</div>
-<div class="row m0">
-<ul class="list-inline memberSocial">
-<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-</div>-->
 <div class="row m0 members">
 <div class="row member m0">
 <div class="row m0">
