--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Products By Aarushee Solar</title>
-<meta name="description" content="Aarushee Solar is a leading solar power producer in India for homes and businesses at affordable prices with a track record of delivering solar projects &amp; a total portfolio of over 100 MW across 12 states.">
+<meta name="description" content="Products Provided By Aarushee Solar which is a leading solar power producer for homes and businesses at cheap prices in India.">
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Aarushee Solar - A Leading Solar Power Company in India" />
