--- a/contact.html
+++ b/contact.html
@@ -5,19 +5,19 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Contact Aarushee Solar</title>
-<meta name="description" content="Aarushee Solar is a leading solar power producer in India for homes and businesses at affordable prices with a track record of delivering solar projects &amp; a total portfolio of over 100 MW across 12 states.">
+<meta name="description" content="Contact Aarushee Solar LLP Company which is a leading solar power producer in India for homes and businesses at affordable rates with a track record of delivering solar projects.">
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Aarushee Solar - A Leading Solar Power Company in India" />
-<meta property="og:description" content="Aarushee Solar is a leading solar power producer in India for homes and businesses at affordable prices with a track record of delivering solar projects &amp; a total portfolio of over 100 MW across 12 states." />
+<meta property="og:title" content="Contact Aarushee Solar" />
+<meta property="og:description" content="Contact Aarushee Solar which is a leading solar power producer in India for homes and businesses at affordable prices with a track record of delivering solar projects &amp; a total portfolio of over 100 MW across 12 states." />
 <meta property="og:url" content="https://aarusheesolar.com" />
 <meta property="og:site_name" content="Aarushee Solar" />
 <meta property="og:image" content="https://aarusheesolar.com/images/newlogo.png" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:url" content="https://aarusheesolar.com" />
 <meta name="twitter:site" content="@aarusheesolar"/><meta name="twitter:domain" content="aarusheesolar.com"/><meta name="twitter:image:src" content="https://aarusheesolar.com/images/newlogo.png"/>
-<meta name="twitter:description" content="Aarushee Solar is a leading solar power producer in India for homes and businesses at affordable prices with a track record of delivering solar projects &amp; a total portfolio of over 100 MW across 12 states." />
-<meta name="twitter:title" content="Aarushee Solar - A Leading Solar Power Company in India" />
+<meta name="twitter:description" content="Contact Aarushee Solar which is a leading solar power producer in India for homes and businesses at affordable prices with a track record of delivering solar projects &amp; a total portfolio of over 100 MW across 12 states." />
+<meta name="twitter:title" content="Contact Aarushee Solar" />
 <!--Favicons-->
 <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-touch-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-touch-icon-60x60.png">
