--- a/roofTop.html
+++ b/roofTop.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Aarushee Solar - A Leading Solar Power Company in India</title>
-<meta name="description" content="Aarushee Solar is a leading solar power producer in India for homes and businesses at affordable prices with a track record of delivering solar projects &amp; a total portfolio of over 100 MW across 12 states.">
+<title>Roof-top projects By Aarushee Solar - A Leading Solar Power Company in India</title>
+<meta name="description" content="Roof-top projects By Aarushee Solar which is a leading solar power company in India for homes and businesses at budget rates.">
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Aarushee Solar - A Leading Solar Power Company in India" />
