--- a/pricing.html
+++ b/pricing.html
@@ -13,16 +13,14 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <link rel="stylesheet" href="css/style-min.css">
 <style>
-
+@media screen and (min-width:0px) and (max-width:1059px){#DIV_2,#DIV_1,#DIV_3{display:block!important;}#DIV_3, #DIV_14, #DIV_25{width:350px;margin:0 auto!important;}#DIV_2:after{content:" ";display: table;}#divContainer{padding-left:2px!important}}
 #DIV_1 {
     box-sizing: border-box;
     color: rgb(33, 37, 41);
-    height: 351.4px;
     max-width: 1140px;
     text-align: left;
     text-decoration: none solid rgb(33, 37, 41);
     text-size-adjust: 100%;
-    width: 1140px;
     column-rule-color: rgb(33, 37, 41);
     perspective-origin: 570px 175.7px;
     transform-origin: 570px 175.7px;
@@ -30,6 +28,7 @@
     border: 0px none rgb(33, 37, 41);
     font: normal normal 400 normal 16px / 24px -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     outline: rgb(33, 37, 41) none 0px;
+	margin:0 auto!important;
 }/*#DIV_1*/
 
 #DIV_1:after {
@@ -62,11 +61,9 @@
     box-sizing: border-box;
     color: rgb(33, 37, 41);
     display: flex;
-    height: 351.4px;
     text-align: center;
     text-decoration: none solid rgb(33, 37, 41);
     text-size-adjust: 100%;
-    width: 1140px;
     column-rule-color: rgb(33, 37, 41);
     perspective-origin: 570px 175.7px;
     transform-origin: 570px 175.7px;
@@ -74,8 +71,9 @@
     border: 0px none rgb(33, 37, 41);
     flex-flow: row wrap;
     font: normal normal 400 normal 16px / 24px -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    margin: 0px -15px 16px;
+    margin:0 auto!important;
     outline: rgb(33, 37, 41) none 0px;
+
 }/*#DIV_2*/
 
 #DIV_2:after {
@@ -123,7 +121,6 @@
     text-decoration: none solid rgb(33, 37, 41);
     text-size-adjust: 100%;
     top: 0px;
-    width: 350px;
     column-rule-color: rgb(33, 37, 41);
     perspective-origin: 175px 163.7px;
     transform-origin: 175px 163.7px;
@@ -182,7 +179,6 @@
     text-align: center;
     text-decoration: none solid rgb(33, 37, 41);
     text-size-adjust: 100%;
-    width: 348px;
     column-rule-color: rgb(33, 37, 41);
     perspective-origin: 174px 26.9px;
     transform-origin: 174px 26.9px;
@@ -768,12 +764,8 @@
 <section id="pageCover" class="row servicePage">
 <div class="row pageTitle">Pricing</div></section>
 <section id="services" class="row">
-<div class="container">
-<div class="row">
-<div class="col-sm-9" style="width:100%">
-<div class="row">
 <div class="row m0 whyUs">
-<div class="col-sm-12">
+<div class="col-sm-12" id="divContainer">
 <div class="row m0 whyUsInner">
 <div id="DIV_1">
 <div id="DIV_2">
@@ -791,7 +783,7 @@
 </ul> 
 <button type="button" id="BUTTON_13">Contact us</button>
 </div>
-</div>
+</div><br>
 <div id="DIV_14">
 <div id="DIV_15">
 <h4 id="H4_16">Bunglow</h4>
@@ -806,7 +798,7 @@
 </ul> 
 <button type="button" id="BUTTON_24">Contact us</button>
 </div>
-</div>
+</div><br>
 <div id="DIV_25">
 <div id="DIV_26">
 <h4 id="H4_27">Large Industry</h4>
@@ -828,6 +820,10 @@
 </div>
 </div>
 </div>
+<div class="container">
+<div class="row">
+<div class="col-sm-9" style="width:100%">
+<div class="row">
 <div class="row m0 whyUs">
 <div class="col-sm-12">
 <div class="row m0 whyUsInner">
